# reed-solomon

./: CMakeLists.txt  README.md  ipprotect.cc  rs.cc  rs.hh  rscmd.cc  rstest.cc  testrunner.cc
.github/workflows/: cmake.yml
ext/: argparse.hpp
